# cmake

./: .gitmodules
generator/: CMakeLists.txt  README.md
generator/resources/: CMakeListsLib.txt.in  CMakeListsRoot.txt.in  CMakeListsSrc.txt.in  CMakeListsTest.txt.in  lib.cpp.in  lib.h.in  main.cpp.in  test.cpp.in
zen/asm/: CMakeLists.txt  ELF-64.md  OpCodes.md  intel80386.md  intel8080.md  intel8086.md  register.md
zen/asm/reng/: reng.md
zen/asm/reng/elf/: ELF-64.md  elf-datatypes.md  elf-files.md  elf-header.md  elf-hexdump-pht.md  elf-hexdump.md  elf-hexdump_pht.md  elf-program-header-table.md  elf-program-header.md  elf-section-header.md
zen/asm/reng/elf/tables/: e_ident.md  e_machine.md  e_type.md
zen/asm/reng/intel/: intel8086.md
zen/asm/src/: CMakeLists.txt
zen/nehe/: CMakeLists.txt
zen/nehe/cmake/Modules/: FindSDL2.cmake
zen/nehe/lesson1/: CMakeLists.txt  lesson1.c
zen/nehe/lesson10/: CMakeLists.txt
zen/nehe/lesson11/: CMakeLists.txt  lesson11.c
zen/nehe/lesson12/: CMakeLists.txt  lesson12.c
zen/nehe/lesson13/: CMakeLists.txt  lesson13  lesson13.c
zen/nehe/lesson16/: CMakeLists.txt  lesson16.c
zen/nehe/lesson18/: CMakeLists.txt  lesson18.c
zen/nehe/lesson19/: CMakeLists.txt
zen/nehe/lesson2/: CMakeLists.txt  lesson2.c
zen/nehe/lesson20/: CMakeLists.txt  lesson20  lesson20.c
zen/nehe/lesson21/: CMakeLists.txt  lesson21.c
zen/nehe/lesson3/: CMakeLists.txt  lesson3.c
zen/nehe/lesson4/: CMakeLists.txt  lesson4.c
zen/nehe/lesson5/: CMakeLists.txt
zen/nehe/lesson6/: CMakeLists.txt  lesson6
zen/nehe/lesson7/: CMakeLists.txt
zen/nehe/lesson8/: CMakeLists.txt
zen/nehe/lesson9/: CMakeLists.txt
zen/picking/: CMakeLists.txt
zen/picking/doc/: CMakeLists.txt  doxygen.cfg.in
zen/picking/lib/: CMakeLists.txt  vsResSurfRevLib.cpp  vsResourceLib.cpp  vsResourceLib.h  vsShaderLib.cpp
zen/picking/shaders/: pixeldirdifambspec.frag  selection.frag
zen/picking/src/: CMakeLists.txt  picking.cpp
zen/timer/: CMakeLists.txt
zen/timer/src/: CMakeLists.txt  timer.c
zen/triangle/: CMakeLists.txt
zen/triangle/lib/: CMakeLists.txt  myOpenGL.cpp  myOpenGL.h  myShader.cpp  myShader.h  myVertex.cpp  myVertex.h
zen/triangle/resources/: 5.1.transform.fs
zen/triangle/src/: CMakeLists.txt  main.cpp  transformation.cpp
