cmake_minimum_required(VERSION 3.16.4)
project(neheOpenGL)

set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_SOURCE_DIR}/cmake/Modules/")
set(CMAKE_EXPORT_COMPILE_COMMANDS ON)

add_subdirectory(lesson1)
add_subdirectory(lesson2)
add_subdirectory(lesson3)
add_subdirectory(lesson4)
add_subdirectory(lesson5)
add_subdirectory(lesson6)
add_subdirectory(lesson7)
add_subdirectory(lesson8)
add_subdirectory(lesson9)
add_subdirectory(lesson10)
add_subdirectory(lesson11)
add_subdirectory(lesson12)
add_subdirectory(lesson13)
add_subdirectory(lesson16)
add_subdirectory(lesson18)
add_subdirectory(lesson19)
add_subdirectory(lesson20)
add_subdirectory(lesson21)
